--- a/finalModule/finalModule/src/main/resources/templates/admin/layout/layout.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/layout/layout.html
@@ -8,33 +8,31 @@
   <link rel="stylesheet" th:href="@{css/admin/fragments/sidebar.css}">
   <link rel="stylesheet" th:href="@{css/admin/fragments/header.css}">
   <link rel="stylesheet" th:href="@{css/admin/fragments/footer.css}">
+  <link rel="stylesheet" th:href="@{css/admin/layout/layout.css}">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .main-content {
-      margin-left: 250px;
-      margin-top: 100px;
-      margin-bottom: 50px;
-      padding: 20px;
-      min-height: calc(100vh - 110px);
-      transition: margin-left 0.3s ease;
-    }
-  </style>
 </head>
 <body>
 <div th:replace="admin/fragments/header :: header"></div>
 <div th:replace="admin/fragments/sidebar :: sidebar"></div>
 <main class="main-content" th:fragment="content">
-  <div class="col-md-9 container mt-4">
-    <h1 class="mb-4">Quản lý nhân viên</h1>
-    <div class="mb-4">
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Tìm kiếm nhân viên .." aria-label="Search">
-        <button class="btn btn-primary" type="submit">Tìm kiếm</button>
+  <div class="wrapper col-md-9 container mt-4" >
+    <h1 class="tittle mb-4">Quản lý nhân viên</h1>
+    <div class="form-mb-4">
+      <form class="search-form">
+        <select class="input-select">
+          <option value="0">Tên</option>
+          <option value="1">Số điện thoại</option>
+          <option value="2">Công việc</option>
+        </select>
+        <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm nhân viên..." aria-label="Search">
+        <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
+          <i class="fas fa-search"></i>
+        </button>
       </form>
+      <hr style="border: 1px solid #333333; margin-top: 8px;">
     </div>
-
     <table class="table table-striped table-bordered">
       <thead class="table-dark">
       <tr>
