--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -76,7 +76,7 @@
                         </span>
         </a>
         <ul class="treeview-menu">
-          <li><a th:href="@{/products/categories}"><i class="fa fa-cogs"></i> Danh mục sản phẩm</a></li>
+          <li><a th:href="@{/products/categories}"><i class="fa fa-cogs"></i> Danh mục </a></li>
           <li><a th:href="@{/products/brands}"><i class="fa fa-briefcase"></i> Thương hiệu</a></li>
           <li><a th:href="@{/products}"><i class="fa fa-cube"></i> Sản phẩm</a></li>
         </ul>
