--- a/finalModule/finalModule/src/main/resources/templates/admin/layout/layout.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/layout/layout.html
@@ -20,17 +20,20 @@
   <div class="wrapper col-md-9 container mt-4" >
     <h1 class="tittle mb-4">Quản lý nhân viên</h1>
     <div class="form-mb-4">
-      <form class="search-form">
-        <select class="input-select">
-          <option value="0">Tên</option>
-          <option value="1">Số điện thoại</option>
-          <option value="2">Công việc</option>
-        </select>
-        <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm nhân viên..." aria-label="Search">
-        <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
-          <i class="fas fa-search"></i>
-        </button>
-      </form>
+      <div class="search-container">
+        <form class="search-form">
+          <select class="input-select">
+            <option value="0">Tên</option>
+            <option value="1">Số điện thoại</option>
+            <option value="2">Công việc</option>
+          </select>
+          <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm nhân viên..." aria-label="Search">
+          <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
+            <i class="fas fa-search"></i>
+          </button>
+        </form>
+        <a href="/Admin/employee-manager/create" class="btn-create btn btn-success">Thêm Nhân Viên</a>
+      </div>
       <hr style="border: 1px solid #333333; margin-top: 8px;">
     </div>
     <table class="table table-striped table-bordered">
@@ -58,10 +61,6 @@
       </tr>
       </tbody>
     </table>
-
-    <div class="mt-4">
-      <a href="/admin-home/employee-manager/create" class="btn btn-success">Thêm Nhân Viên</a>
-    </div>
   </div>
 </main>
 <div th:replace="admin/fragments/footer :: footer"></div>
