--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/listbrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/listbrand.html
@@ -1,10 +1,9 @@
-<!-- templates/layout.html -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quản lý cửa hàng điện thoại</title>
+  <title>Quản lý thương hiệu</title>
   <link rel="stylesheet" th:href="@{css/admin/fragments/sidebar.css}">
   <link rel="stylesheet" th:href="@{css/admin/fragments/header.css}">
   <link rel="stylesheet" th:href="@{css/admin/fragments/footer.css}">
@@ -15,24 +14,23 @@
 </head>
 <body>
 <div th:replace="~{admin/fragments/header :: header}"></div>
-<div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
+<div th:replace="admin/fragments/sidebar :: sidebar"></div>
 <main class="main-content" th:fragment="content">
-  <div class="wrapper col-md-9 container mt-4" >
-    <h1 class="tittle mb-4">Quản lý nhân viên</h1>
+  <div class="wrapper col-md-9 container mt-4">
+    <h1 class="tittle mb-4">Quản lý thương hiệu</h1>
     <div class="form-mb-4">
       <div class="search-container">
         <form class="search-form">
           <select class="input-select">
-            <option value="0">Tên</option>
-            <option value="1">Số điện thoại</option>
-            <option value="2">Công việc</option>
+            <option value="0">Tên thương hiệu</option>
+            <option value="1">Mã thương hiệu</option>
           </select>
-          <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm nhân viên..." aria-label="Search">
+          <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm thương hiệu..." aria-label="Search">
           <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
             <i class="fas fa-search"></i>
           </button>
         </form>
-        <a href="/Admin/employee-manager/create" class="btn-create btn btn-success">Thêm Nhân Viên</a>
+        <a href="/Admin/brand-manager/create" class="btn-create btn btn-success">Thêm Thương Hiệu</a>
       </div>
       <hr style="border: 1px solid #333333; margin-top: 8px;">
     </div>
@@ -40,21 +38,21 @@
       <thead class="table-dark">
       <tr>
         <th>ID</th>
-        <th>Tên Nhân Viên</th>
-        <th>Địa chỉ</th>
-        <th>Email</th>
+        <th>Tên Thương Hiệu</th>
+        <th>Ngày Tạo</th>
+        <th>Cập Nhật Lần Cuối</th>
         <th>Thao tác</th>
       </tr>
       </thead>
       <tbody>
-      <tr th:each="employee : ${employees}">
-        <td th:text="${employee.employeeId}"></td>
-        <td th:text="${employee.name}"></td>
-        <td th:text="${employee.address}"></td>
-        <td th:text="${employee.email}"></td>
+      <tr th:each="brand : ${brands}">
+        <td th:text="${brand.brandID}"></td>
+        <td th:text="${brand.name}"></td>
+        <td th:text="${#temporals.format(brand.createAt, 'dd-MM-yyyy HH:mm')}"></td>
+        <td th:text="${#temporals.format(brand.updateAt, 'dd-MM-yyyy HH:mm')}"></td>
         <td>
-          <a th:href="@{/admin-home/employee-manager/edit/{employeeId}(employeeId=${employee.employeeId})}" class="btn btn-warning btn-sm">Chỉnh sửa</a>
-          <form th:action="@{/admin-home/employee-manager/delete/{employeeId}(employeeId=${employee.employeeId})}" method="post" class="d-inline">
+          <a th:href="@{/admin-home/brand-manager/edit/{brandId}(brandId=${brand.brandID})}" class="btn btn-warning btn-sm">Chỉnh sửa</a>
+          <form th:action="@{/admin-home/brand-manager/delete/{brandId}(brandId=${brand.brandID})}" method="post" class="d-inline">
             <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc chắn muốn xóa không?')">Xóa</button>
           </form>
         </td>
@@ -63,7 +61,7 @@
     </table>
   </div>
 </main>
-<div th:replace="~{admin/fragments/footer :: footer}"></div>
+<div th:replace="admin/fragments/footer :: footer"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
 
 </body>
