--- a/finalModule/finalModule/src/main/resources/templates/admin/product/listproduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product/listproduct.html
@@ -14,23 +14,24 @@
 </head>
 <body>
 <div th:replace="~{admin/fragments/header :: header}"></div>
-<div th:replace="admin/fragments/sidebar :: sidebar"></div>
+<div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
 <main class="main-content" th:fragment="content">
-    <div class="wrapper col-md-9 container mt-4" >
-        <h1 class="tittle mb-4">Quản lý danh mục</h1>
+    <div class="wrapper col-md-9 container mt-4">
+        <h1 class="title mb-4">Quản lý sản phẩm</h1>
         <div class="form-mb-4">
             <div class="search-container">
                 <form class="search-form">
                     <select class="input-select">
-                        <option value="0">Tên danh mục</option>
-                        <option value="1">Mã danh mục</option>
+                        <option value="0">Tên sản phẩm</option>
+                        <option value="1">Giá</option>
+                        <option value="2">Danh mục</option>
                     </select>
-                    <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm danh mục..." aria-label="Search">
+                    <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm sản phẩm..." aria-label="Search">
                     <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <a href="/Admin/category-manager/create" class="btn-create btn btn-success">Thêm Danh Mục</a>
+                <a href="/Admin/product-manager/create" class="btn-create btn btn-success">Thêm Sản Phẩm</a>
             </div>
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
@@ -38,21 +39,23 @@
             <thead class="table-dark">
             <tr>
                 <th>ID</th>
-                <th>Tên Danh Mục</th>
-                <th>Ngày Tạo</th>
-                <th>Cập Nhật Lần Cuối</th>
+                <th>Tên sản phẩm</th>
+                <th>Giá</th>
+                <th>Danh mục</th>
+                <th>Thương hiệu</th>
                 <th>Thao tác</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="category : ${categories}">
-                <td th:text="${category.categoryID}"></td>
-                <td th:text="${category.name}"></td>
-                <td th:text="${#temporals.format(category.createAt, 'dd-MM-yyyy HH:mm')}"></td>
-                <td th:text="${#temporals.format(category.updateAt, 'dd-MM-yyyy HH:mm')}"></td>
+            <tr th:each="product : ${products}">
+                <td th:text="${product.productID}"></td>
+                <td th:text="${product.name}"></td>
+                <td th:text="${product.price}"></td>
+                <td th:text="${product.category.name}"></td>
+                <td th:text="${product.brand.name}"></td>
                 <td>
-                    <a th:href="@{/admin-home/category-manager/edit/{categoryId}(categoryId=${category.categoryID})}" class="btn btn-warning btn-sm">Chỉnh sửa</a>
-                    <form th:action="@{/admin-home/category-manager/delete/{categoryId}(categoryId=${category.categoryID})}" method="post" class="d-inline">
+                    <a th:href="@{/Admin/product-manager/edit/{productID}(productID=${product.productID})}" class="btn btn-warning btn-sm">Chỉnh sửa</a>
+                    <form th:action="@{/Admin/product-manager/delete/{productID}(productID=${product.productID})}" method="post" class="d-inline">
                         <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc chắn muốn xóa không?')">Xóa</button>
                     </form>
                 </td>
@@ -61,8 +64,7 @@
         </table>
     </div>
 </main>
-<div th:replace="admin/fragments/footer :: footer"></div>
+<div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
-
 </body>
 </html>
