--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/listbrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/listbrand.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quản lý thương hiệu</title>
-  <link rel="stylesheet" th:href="@{css/admin/fragments/sidebar.css}">
-  <link rel="stylesheet" th:href="@{css/admin/fragments/header.css}">
-  <link rel="stylesheet" th:href="@{css/admin/fragments/footer.css}">
-  <link rel="stylesheet" th:href="@{css/admin/layout/layout.css}">
+  <title>Quản lý Sản phẩm</title>
+  <link rel="stylesheet" th:href="@{/css/admin/fragments/sidebar.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/fragments/header.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/fragments/footer.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/layout/layout.css}">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div th:replace="~{admin/fragments/header :: header}"></div>
-<div th:replace="admin/fragments/sidebar :: sidebar"></div>
+<div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
 <main class="main-content" th:fragment="content">
   <div class="wrapper col-md-9 container mt-4">
     <h1 class="tittle mb-4">Quản lý thương hiệu</h1>
@@ -61,8 +61,7 @@
     </table>
   </div>
 </main>
-<div th:replace="admin/fragments/footer :: footer"></div>
+<div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
-
 </body>
 </html>
