--- a/finalModule/finalModule/src/main/resources/templates/admin/product/listproduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product/listproduct.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản lý cửa hàng điện thoại</title>
-    <link rel="stylesheet" th:href="@{css/admin/fragments/sidebar.css}">
-    <link rel="stylesheet" th:href="@{css/admin/fragments/header.css}">
-    <link rel="stylesheet" th:href="@{css/admin/fragments/footer.css}">
-    <link rel="stylesheet" th:href="@{css/admin/layout/layout.css}">
+    <title>Quản lý Sản phẩm</title>
+    <link rel="stylesheet" th:href="@{/css/admin/fragments/sidebar.css}">
+    <link rel="stylesheet" th:href="@{/css/admin/fragments/header.css}">
+    <link rel="stylesheet" th:href="@{/css/admin/fragments/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/admin/layout/layout.css}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
