--- a/finalModule/finalModule/src/main/resources/static/css/admin/layout/layout.css
+++ b/finalModule/finalModule/src/main/resources/static/css/admin/layout/layout.css
@@ -54,6 +54,7 @@
     border-radius: 0;
     padding: 8px 12px;
     flex-grow: 1;
+    width: 400px;
 }
 
 .search-form button {
@@ -66,6 +67,7 @@
     padding: 8px 12px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    width: 50px;
 }
 
 .search-form button:hover {
