--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/listbrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/listbrand.html
@@ -20,12 +20,11 @@
     <h1 class="tittle mb-4">Quản lý thương hiệu</h1>
     <div class="form-mb-4">
       <div class="search-container">
-        <form class="search-form">
-          <select class="input-select">
-            <option value="0">Tên thương hiệu</option>
-            <option value="1">Mã thương hiệu</option>
+        <form class="search-form" action="/Admin/brand-manager" method="get">
+          <select class="input-select" name="filterBy">
+            <option value="name">Tên thương hiệu</option>
           </select>
-          <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm thương hiệu..." aria-label="Search">
+          <input class="form-control form-control-sm" type="search" name="keyword" placeholder="Tìm kiếm thương hiệu..." aria-label="Search">
           <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
             <i class="fas fa-search"></i>
           </button>
