--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/addemployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/addemployee.html
@@ -24,7 +24,7 @@
             <h3 class="mb-0">Thêm Nhân Viên</h3>
           </div>
           <div class="card-body">
-            <form th:action="@{/employees/create}" method="POST" th:object="${employeeDTO}" class="needs-validation" novalidate>
+            <form th:action="@{/Admin/employee-manager/create}" method="POST" th:object="${employeeDTO}" class="needs-validation" novalidate>
               <div class="mb-3">
                 <label for="employeeName" class="form-label">Họ và Tên</label>
                 <input type="text" class="form-control" id="employeeName" name="employeeName" th:field="*{employeeName}" required>
@@ -35,11 +35,6 @@
                 <input type="date" class="form-control" id="employeeBirthday" name="employeeBirthday" th:field="*{employeeBirthday}" required>
                 <p th:if="${#fields.hasErrors('employeeBirthday')}" th:errors="*{employeeBirthday}"></p>
 
-              </div>
-              <div class="mb-3">
-                <label for="employeeEmail" class="form-label">Email</label>
-                <input type="email" class="form-control" id="employeeEmail" name="employeeEmail" th:field="*{employeeEmail}" required>
-                <p th:if="${#fields.hasErrors('employeeEmail')}" th:errors="*{employeeEmail}"></p>
               </div>
               <div class="mb-3">
                 <label for="employeePhone" class="form-label">Số điện thoại</label>
