--- a/finalModule/finalModule/src/main/resources/static/css/admin/layout/layout.css
+++ b/finalModule/finalModule/src/main/resources/static/css/admin/layout/layout.css
@@ -93,4 +93,7 @@
 .btn-create:hover {
     background-color: #22313F;
 }
-
+body.sidebar-collapsed .main-content {
+    margin-left: 80px;
+    transition: margin-left 0.3s ease-in-out;
+}
