--- a/finalModule/finalModule/src/main/resources/static/css/admin/layout/layout.css
+++ b/finalModule/finalModule/src/main/resources/static/css/admin/layout/layout.css
@@ -93,4 +93,9 @@
 .btn-create:hover {
     background-color: #22313F;
 }
+.error {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+}
 
