fix sương sương
fix sương sương

--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/editBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/editBrand.html
@@ -43,5 +43,11 @@
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script th:fragment="sidebarScript" >
+    // Toggle sidebar
+    document.getElementById('sidebar-toggle').addEventListener('click', () => {
+        document.body.classList.toggle('sidebar-collapsed');
+    });
+</script>
 </body>
 </html>
