--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
@@ -47,7 +47,6 @@
         }
 
     </style>
-
 </head>
 <body>
 <div th:replace="~{admin/fragments/header :: header}"></div>
@@ -156,5 +155,11 @@
     }, 4000);
 </script>
 <script th:src="@{/js/admin/deleteMultipleEmployee.js}"></script>
+<script th:fragment="sidebarScript" >
+    // Toggle sidebar
+    document.getElementById('sidebar-toggle').addEventListener('click', () => {
+        document.body.classList.toggle('sidebar-collapsed');
+    });
+</script>
 </body>
 </html>
