--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -55,13 +55,6 @@
           <li><a th:href="@{/Admin/stock-export}"><i class="fa fa-upload"></i> Xuất kho</a></li>
         </ul>
       </li>
-
-      <li>
-        <a th:href="@{/Admin/profile}">
-          <i class="fa fa-user"></i> <span>Quản lý Thông tin cá nhân</span>
-        </a>
-      </li>
-
       <li>
         <a th:href="@{/Admin/employee-manager}">
           <i class="fa fa-users"></i> <span>Quản lý Nhân viên</span>
@@ -81,6 +74,12 @@
           <li><a th:href="@{/Admin/product-manager}"><i class="fa fa-cube"></i> Sản phẩm</a></li>
         </ul>
       </li>
+      <li>
+        <a th:href="@{/Admin/discount-manager}">
+          <i class="fa fa-tags"></i> <span>Quản lý Mã giảm giá</span>
+        </a>
+      </li>
+
     </ul>
   </section>
 </aside>
