thêm search product theo category

--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -79,7 +79,11 @@
           <i class="fa fa-tags"></i> <span>Quản lý Mã giảm giá</span>
         </a>
       </li>
-
+      <li>
+        <a th:href="@{/Admin/review-manager}">
+          <i class="fa fa-star"></i> <span>Quản lý Đánh giá</span>
+        </a>
+      </li>
     </ul>
   </section>
 </aside>
