--- a/finalModule/finalModule/src/main/resources/templates/admin/category/listCategory.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/category/listCategory.html
@@ -29,7 +29,9 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <a href="/Admin/category-manager/create" class="btn-create btn btn-success">Thêm Danh Mục</a>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addBrandModal">
+                    Thêm Danh Mục
+                </button>
             </div>
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
@@ -73,14 +75,56 @@
             </tbody>
         </table>
     </div>
+    <!-- Modal Thêm Thương Hiệu -->
+    <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addBrandModalLabel">Thêm category</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="addBrandForm" th:action="@{/Admin/add-categoryManager}" method="post" th:object="${categorys}">
+                        <!-- Tên thương hiệu -->
+                        <div class="mb-3">
+                            <label class="form-label">Tên </label>
+                            <input type="text" class="form-control" th:field="*{name}" required>
+
+                        </div>
+                        <!-- Mô tả -->
+                        <div class="mb-3">
+                            <label class="form-label">Mô tả</label>
+                            <input type="text" class="form-control" th:field="*{description}" required>
+
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Lưu</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:fragment="sidebarScript" >
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
         document.body.classList.toggle('sidebar-collapsed');
     });
+
+</script>
+<script th:inline="javascript">
+    window.onload = function () {
+        var showModal = /*[[${showModal}]]*/ false;
+        if (showModal) {
+            var modal = new bootstrap.Modal(document.getElementById('addBrandModal'));
+            modal.show();
+        }
+    }
 </script>
 </body>
 </html>
