--- a/finalModule/finalModule/src/main/resources/templates/admin/product/editProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product/editProduct.html
@@ -27,6 +27,11 @@
                         <form th:action="@{/Admin/product-manager/edit}" method="POST" th:object="${product}" class="needs-validation" novalidate>
                             <input type="hidden" th:field="*{productID}">
                             <div class="mb-3">
+                                <label for="imageUrl" class="form-label">Ảnh </label>
+                                <input type="text" class="form-control" id="imageUrl" name="imageUrl" th:field="*{imageUrl}" required>
+                                <p th:if="${#fields.hasErrors('imageUrl')}" th:errors="*{imageUrl}"></p>
+                            </div>
+                            <div class="mb-3">
                                 <label for="name" class="form-label">Tên sản phẩm</label>
                                 <input type="text" class="form-control" id="name" name="name" th:field="*{name}" required>
                                 <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
