--- a/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
@@ -30,8 +30,10 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <a href="/Admin/product-manager/create" class="btn-create btn btn-success">Thêm Nhân Viên</a>
             </div>
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addBrandModal">
+                Thêm Sản Phẩm
+            </button>
             <div class="filter-container mt-3 d-flex align-items-center">
                 <label class="me-2">Lọc theo giá:</label>
                 <form method="GET" action="/Admin/product-manager" class="d-flex">
@@ -40,6 +42,7 @@
                     <button class="btn btn-primary btn-sm" type="submit">Lọc</button>
                 </form>
             </div>
+
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
         <table class="table table-striped table-bordered">
@@ -84,6 +87,63 @@
             </tbody>
         </table>
     </div>
+    <!-- Modal Thêm Sản phẩm  -->
+    <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addBrandModalLabel">Thêm Sản Phẩm mới</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="addBrandForm" th:action="@{/Admin/product-manager/add}"
+                          method="post" th:object="${product}" enctype="multipart/form-data">
+
+                        <div class="mb-3">
+                            <label class="form-label">Tên Sản Phẩm</label>
+                            <input type="text" class="form-control" th:field="*{name}" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Chọn Ảnh</label>
+                            <input type="file" name="file" accept="image/*" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Giá</label>
+                            <input type="number" class="form-control" th:field="*{price}" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Mô tả</label>
+                            <input type="text" class="form-control" th:field="*{description}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Danh mục</label>
+                            <select class="form-control" th:field="*{category}">
+                                <option value="">-- Chọn danh mục --</option>
+                                <option th:each="c : ${categories}" th:value="${c.categoryID}" th:text="${c.name}"></option>
+
+
+                            </select>
+                        </div>
+
+                        <!-- Chọn thương hiệu -->
+                        <div class="mb-3">
+                            <label class="form-label">Thương hiệu</label>
+                            <select class="form-control" th:field="*{brand}">
+                                <option value="">-- Chọn thương hiệu --</option>
+                                <option th:each="c: ${brand}" th:value="${c.brandID}" th:text="${c.name}"></option>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Lưu</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
@@ -93,5 +153,6 @@
         document.body.classList.toggle('sidebar-collapsed');
     });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
