--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -14,7 +14,7 @@
         <img th:src="@{/images/avtadmin/avarta.jpg}" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
-        <p> Zịt Kêu Cạp Cạp </p>
+        <p th:text="${username}"></p>
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
     </div>
